/*
 * $Id: ChangeLog,v 1.5790 2007/11/28 23:35:45 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-11-29 14.30 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/regex.c
    ! fix memory leaks on function hb_regex()

  * source/rtl/direct.c
    ! add 2 "funny" dummy lines for __DMC__ because without these lines __DMC__
      will GPF running tests/dirtest4.prg (DMC 8.50.4 was in use)
      NOTE: This is really not funny but the fact is it. These lines will be
      	    deleted when next version of __DMC__ can survive without it.
            BCC/MSVC/GCC/WC/XCC/POCC are OK, so my conclusion is, it is DMC bug.
    % minor formatting

2007-11-28 06.20 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h
  * source/rtl/pcre/pcre.h.generic
  * source/rtl/pcre/pcreposix.c
  * source/rtl/pcre/pcreposix.h
  * source/rtl/pcre/pcre_chartables.c
  * source/rtl/pcre/pcre_chartables.c.dist
  * source/rtl/pcre/pcre_compile.c
  * source/rtl/pcre/pcre_config.c
  * source/rtl/pcre/pcre_dfa_exec.c
  * source/rtl/pcre/pcre_exec.c
  * source/rtl/pcre/pcre_fullinfo.c
  * source/rtl/pcre/pcre_get.c
  * source/rtl/pcre/pcre_globals.c
  * source/rtl/pcre/pcre_info.c
  * source/rtl/pcre/pcre_internal.h
  * source/rtl/pcre/pcre_maketables.c
  * source/rtl/pcre/pcre_newline.c
  * source/rtl/pcre/pcre_ord2utf8.c
  * source/rtl/pcre/pcre_printint.src
  * source/rtl/pcre/pcre_refcount.c
  * source/rtl/pcre/pcre_scanner.h
  * source/rtl/pcre/pcre_study.c
  * source/rtl/pcre/pcre_tables.c
  * source/rtl/pcre/pcre_try_flipped.c
  * source/rtl/pcre/pcre_ucp_searchfuncs.c
  * source/rtl/pcre/pcre_valid_utf8.c
  * source/rtl/pcre/pcre_version.c
  * source/rtl/pcre/pcre_xclass.c
  * source/rtl/pcre/ucp.h
  * source/rtl/pcre/ucpinternal.h